--- a/src/components/searchBar/Search.css
+++ b/src/components/searchBar/Search.css
@@ -9,6 +9,21 @@
   border-radius: 10px;
 }
 
+.results {
+  margin-top: 20px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  margin-bottom: 12vh;
+}
+
+.results li {
+  list-style: none;
+  margin: 12px;
+  height: 380px;
+  width: 220px;
+}
+
 /* Responsive */
 @media screen and (min-width: 600px) {
   .SearchBar {
