--- a/src/components/searchBar/Search.css
+++ b/src/components/searchBar/Search.css
@@ -1,4 +1,4 @@
-.SearchBar {
+.searchBar {
   display: inline-block;
   text-align: center;
   margin-top: 70vh;
@@ -26,7 +26,7 @@
 
 /* Responsive */
 @media screen and (min-width: 600px) {
-  .SearchBar {
+  .searchBar {
     width: 40vw;
     height: 8vh;
     margin-left: 30vw;
