--- a/src/components/ResultCard/ResultCard.css
+++ b/src/components/ResultCard/ResultCard.css
@@ -8,6 +8,7 @@
   margin-top: 10px;
   margin-bottom: 50px;
   box-shadow: 3px 10px 23px -10px black;
+  text-decoration: none;
 }
 
 .resultCard:hover {
