All camelCase are OK.

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -15,7 +15,7 @@
 }
 
 .wildAndSons,
-.creditslink {
+.creditsLink {
   color: white;
   text-decoration-line: none;
   text-shadow: 1px 1px 1px wheat;
