--- a/src/components/FicheFilm/FicheFilm.css
+++ b/src/components/FicheFilm/FicheFilm.css
@@ -1,25 +1,63 @@
+body {
+  background-color: goldenrod;
+}
+
 body > div {
   font-family: 'Reem Kufi', sans-serif;
 }
 
 img {
-  width: 225px;
-  height: 348px;
+  width: 325px;
+  height: 418px;
 }
 
 .posterTrailer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin-top: 40px;
   margin-bottom: 40px;
+  
 }
 
-.posterTrailer > img {
-  margin-left: 55px;
+.poster
+{
+  margin-left: 90px;
+  margin-right: 40px;
 }
 
-.posterTrailer > iframe {
-  margin-right: 30vw;
+.backgroundPoster
+{
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.5;
+  clip-path: inset(0% 0% 266px 0%);
+}
+
+.buttonTrailer 
+{
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  margin-top: 330px;
+  margin-right: 5px;
+}
+
+.buttonAdd
+{
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  margin-right: -60px;
+}
+
+.overview {
+  font-size: 25px;
+  text-align: left;
+  margin-top: 10px;
+  margin-right: 30%;
+  width: 60%;
 }
 
 .titreVote {
@@ -32,24 +70,37 @@ img {
   align-items: center;
 }
 
+.genresOverview {
+  font-size: 25px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 55px;
+  margin-bottom: 30px;
+}
+
+.genres {
+  display: flex;
+  flex-direction: row;
+}
+
+.genres > p {
+  padding-top: 80px;
+  padding-right: 20px;
+}
+
 .directorTimeDate {
   font-size: 25px;
   display: flex;
-  justify-content: space-between;
-  margin-left: 55px;
-  margin-right: 30vw;
   align-items: center;
+  padding-left: 100px;
+  width: 100%;
 }
 
-.vote {
-  font-size: 36px;
-}
-
-.overview {
-  font-size: 25px;
-  margin: 40px;
-  margin-left: 55px;
-  margin-right: 55px;
+.directorTimeDate > p
+{
+  
+  padding-right: 10px;
+  width: 200px;
 }
 
 .actors {
@@ -59,32 +110,106 @@ img {
 }
 
 .actors > div img {
-  width: 158px;
-  height: 195px;
-  -webkit-box-shadow: 6px 5px 17px 1px #000;
-  box-shadow: 6px 5px 17px 1px #000;
-  border: 1px solid black;
+  width: 225px;
+  height: 348px;
+  border-top: 1px solid #000;
+  border-right: 1px solid #000;
+  border-left: 1px solid #000;
 }
 
 .actors > div {
-  margin: 30px;
+  margin: 50px;
 }
 
 .actors > div p {
   font-size: 17px;
-  -webkit-box-shadow: 6px 5px 17px 1px #000;
-  box-shadow: 6px 5px 17px 1px #000;
-  border: 1px solid black;
+  background: #000;
+  background: -moz-linear-gradient(top, rgb(0, 0, 0, 0.5) 0%, #eee8ec 20%, #fff 100%);
+  background: -webkit-linear-gradient(top, rgb(0, 0, 0, 0.5) 0%, #eee8ec 20%, #fff 100%);
+  background: linear-gradient(to bottom, rgb(0, 0, 0, 0.5) 0%, #eee8ec 20%, #fff 100%);
+  border-right: 1px solid #000;
+  border-left: 1px solid #000;
+  border-bottom: 1px solid #000;
   background-color: white;
   margin-top: -5px;
-  padding: 4px;
-  padding-top: 12px;
+  margin-bottom: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 225px;
+}
+
+.actors > div img:hover {
+  -webkit-transform: scale(1.31);
+  -moz-transform: scale(1.31);
+  -ms-transform: scale(1.31);
+  -o-transform: scale(1.31);
+  transform: scale(1.31);
+  border: 1.2mm ridge #facc4d;
 }
 
 .actors > div span {
   font-weight: bold;
 }
 
+.starScore {
+  width: 174px;
+  height: 32px;
+}
+
+.numberVote {
+  font-size: 15px;
+  margin-left: 3px;
+  margin-top: 5px;
+}
+@media screen and (max-width: 1920px )
+{
+/* .backgroundPoster
+{
+  overflow: contain;
+} */
+
+.poster
+{
+  margin-left: 90px;
+  margin-right: 5px;
+}
+
+.buttonTrailer 
+{
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  margin-top: 10px;
+  margin-right: -45px;
+}
+
+.buttonAdd
+{
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  margin-right: -59px;
+  margin-top: 270px;
+}
+}
+@media screen and (max-width: 1280px )
+{
+  .backgroundPoster
+  {
+    clip-path: inset(0 0 50.4vh 0);
+  }
+  .genres {
+    flex-wrap: wrap;
+  }
+
+  .overview
+  {
+    width: 80%;
+  }
+  .directorTimeDate {
+    padding-left: 10px;
+  }
+}
 @media screen and (max-width: 390px) {
   .titreVote {
     font-size: 22px;
@@ -106,46 +231,89 @@ img {
     height: 48%;
   }
 
-  .posterTrailer > iframe {
-    margin-left: 10%;
-    width: 80%;
+  .buttons
+  {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-right: 60px;
   }
-
+  .buttonTrailer {
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+  
+  .buttonAdd{
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    margin-top: 40px;;
+  }
   .vote {
     font-size: 18px;
   }
 
   .directorTimeDate {
     font-size: 20px;
-    margin-left: 40px;
-    margin-right: 10px;
+    margin-top: 5px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .directorTimeDate > p
+  {
+    padding-right: 30px;
+    padding-bottom: 20px;
+    width: 200px;
+  }
+
+  .genresOverview {
+    font-size: 25px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 55px;
+    margin-bottom: 30px;
+  }
+
+  .genres {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: -40px;
+  }
+
+  .genres > p {
+    padding-right: 25px;
+    padding-top: 10px;
   }
 
   .overview {
     font-size: 20px;
-    margin: 40px;
     margin-top: 20px;
+    margin-left: 20px;
     text-align: justify;
+    width: 70%;
   }
 
   .actors {
     flex-direction: column;
   }
 
+  .actors > div p {
+    margin-left: 88px;
+    width: 193px;
+  }
+
   .actors > div img {
-    width: 158px;
-    height: 195px;
-    -webkit-box-shadow: 6px 5px 17px 1px #000;
-    box-shadow: 6px 5px 17px 1px #000;
-    border: 1px solid black;
+    width: 193px;
+    height: 241px;
   }
 
   .actors > div {
-    margin: 30px;
-  }
-
-  .actors > div p {
-    width: 150px;
-    margin-left: 25.7%;
+    margin: 2px;
   }
 }
