--- a/src/components/filterButton/FilterButton.css
+++ b/src/components/filterButton/FilterButton.css
@@ -1,6 +1,4 @@
 button {
-  margin-left: 30vw;
-  margin-top: 5vh;
   height: 30px;
   width: 40vw;
   border-radius: 9999px;
@@ -26,6 +24,10 @@ button:active {
 @media screen and (min-width: 600px) {
   button {
     width: 20vw;
-    margin-left: 40vw;
+  }
+
+  .filterButtonBlock {
+    display: flex;
+    justify-content: center;
   }
 }
