--- a/src/components/FicheFilm/FicheFilm.css
+++ b/src/components/FicheFilm/FicheFilm.css
@@ -2,98 +2,118 @@ body > div {
   font-family: 'Reem Kufi', sans-serif;
 }
 
-img {
-  width: 425px;
-  height: 518px;
+.backgroundPoster {
+  z-index: -1;
+  height: 87vh;
+  width: 100%;
+  position: absolute;
+  filter: grayscale(100%) blur(1px) opacity(80%) brightness(80%);
+  object-fit: cover;
+  object-position: center;
 }
 
 .posterTrailer {
   display: flex;
-  justify-content: space-evenly;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  height: 87vh;
+  width: 100%;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.titreVote {
+  font-size: 4vh;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 5vh;
+}
+
+.fufu {
+  display: flex;
+  flex-direction: row;
+  font-size: 3vh;
+  width: 8.75vw;
+}
+
+.starScore {
+  /* width: 8.75vw; */
+  height: 4vh;
+}
+
+.numberVote {
+  font-size: 2vh;
+  margin-left: 3px;
+  margin-top: 5px;
+}
+
+.details {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  padding: 0 2vw 2vw 2vw;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.posterAndOverwiew {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 62.5vw;
+}
+
+.buttons {
+  width: 30vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.vote {
+  align-self: flex-end;
 }
 
 .poster {
-  margin-left: 90px;
-  margin-right: 40px;
-}
-
-.backgroundPoster {
-  z-index: -1;
-  width: 100%;
-  height: 518px;
-  position: absolute;
-  opacity: 0.5;
-}
-
-.backgroundPoster > img {
-  -webkit-box-shadow: inset 0 2px 50px 13px #000;
-  box-shadow: inset 0 2px 50px 13px #000;
+  height: 60vh;
 }
 
 .buttonAdd {
   width: 60px;
   height: 60px;
   cursor: pointer;
-  margin-right: -60px;
+  position: relative;
+  display: none;
 }
 
 .buttonTrailer {
   width: 60px;
   height: 60px;
   cursor: pointer;
-  margin-top: 330px;
-  margin-right: 5px;
+  position: absolute;
+  display: none;
 }
 
 .overview {
   font-size: 25px;
-  text-align: left;
-  margin-top: 10px;
-  margin-right: 30%;
-  width: 60%;
-}
-
-.titreVote {
-  font-size: 43px;
-  display: flex;
-  justify-content: space-between;
-  margin-left: 55px;
-  margin-right: 55px;
-  margin-top: 20px;
-  align-items: center;
+  background-color: rgba(8, 7, 7, 0.219);
+  border-radius: 10px;
+  overflow-y: auto;
+  height: 35vh;
+  padding: 5px;
 }
 
 .genresOverview {
   font-size: 25px;
-  display: flex;
-  flex-direction: column;
-  margin-left: 55px;
-  margin-bottom: 30px;
-}
-
-.genres {
-  display: flex;
-  flex-direction: row;
-}
-
-.genres > p {
-  padding-top: 100px;
-  padding-right: 20px;
+  color: #fff;
+  width: 30vw;
+  padding-top: 10px;
+  margin-right: 1vw;
 }
 
 .directorTimeDate {
   font-size: 25px;
-  display: flex;
-  align-items: center;
-  padding-left: 100px;
-  width: 100%;
-}
-
-.directorTimeDate > p {
-  padding-right: 10px;
-  width: 200px;
+  width: 30vw;
 }
 
 .actors {
@@ -142,18 +162,10 @@ img {
   border-left: 1px solid #000;
   border-bottom: 1px solid #000;
   background-color: white;
-  margin-top: -5px;
-  margin-bottom: 50px;
-  padding-top: 10px;
-  padding-bottom: 10px;
   width: 225px;
 }
 
 .actors > div img:hover {
-  -webkit-transform: scale(1.31);
-  -moz-transform: scale(1.31);
-  -ms-transform: scale(1.31);
-  -o-transform: scale(1.31);
   transform: scale(1.31);
   border: 1.2mm ridge #facc4d;
 }
@@ -162,135 +174,33 @@ img {
   font-weight: bold;
 }
 
-.starScore {
-  width: 174px;
-  height: 32px;
-}
-
-.numberVote {
-  font-size: 15px;
-  margin-left: 3px;
-  margin-top: 5px;
-}
-
-@media screen and (max-width: 1920px) {
-  .poster {
-    margin-left: 90px;
-    margin-right: 5px;
-  }
-
-  .buttonTrailer {
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-    margin-top: 10px;
-    margin-right: -59px;
-  }
-
-  .buttonAdd {
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-    margin-right: -59px;
-    margin-top: 360px;
-  }
-}
-
 @media screen and (max-width: 390px) {
-  .titreVote {
-    font-size: 22px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  .posterTrailer {
+  .movieResume {
     display: flex;
-    margin-top: 30px;
-    margin-bottom: 30px;
     flex-direction: column;
-  }
-
-  .posterTrailer > img {
-    margin-bottom: 25px;
-    margin-left: 25%;
-    width: 48%;
-    height: 48%;
+    height: auto;
+    justify-content: space-between;
   }
 
   .backgroundPoster {
     display: none;
   }
 
-  .buttons {
+  .posterTrailer {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    padding-right: 60px;
-  }
-
-  .buttonTrailer {
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
-
-  .buttonAdd {
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-    margin-top: 40px;
-  }
-
-  .vote {
-    font-size: 18px;
-  }
-
-  .directorTimeDate {
-    font-size: 20px;
-    margin-top: 5px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .directorTimeDate > p {
-    margin-left: -50%;
-    padding-right: 10px;
-    padding-bottom: 20px;
-    width: 200px;
-  }
-
-  .genresOverview {
-    font-size: 25px;
-    display: flex;
-    flex-direction: column;
-    margin-left: 55px;
-    margin-bottom: 30px;
-  }
-
-  .genres {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: -40px;
-  }
-
-  .genres > p {
-    padding-right: 25px;
-    padding-top: 10px;
-  }
-
-  .overview {
-    font-size: 20px;
-    margin-top: 20px;
-    margin-left: 20px;
-    text-align: left;
-    width: 70%;
+    padding-top: 8vh;
+    height: auto;
   }
 
   .actors {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+
+  .details {
+    display: flex;
     flex-direction: column;
   }
 
@@ -306,5 +216,40 @@ img {
 
   .actors > div {
     margin: 2px;
+  }
+
+  .posterAndOverwiew {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    width: 100vw;
+  }
+
+  .titreVote {
+    font-size: 4vh;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    padding: 5vh;
+  }
+
+  .directorTimeDate {
+    display: flex;
+    font-size: 25px;
+  }
+
+  .overview {
+    font-size: 25px;
+    background-color: rgba(8, 7, 7, 0.219);
+    border-radius: 10px;
+    overflow-y: auto;
+    height: 35vh;
+    padding: 5px;
+  }
+
+  .genresOverview {
+    font-size: 25px;
+    color: #fff;
+    width: 90vw;
   }
 }
