--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -59,12 +59,14 @@
   /* Desktop style */
   .navbar {
     height: 10vh;
-    width: 100vw;
+    width: 100%;
     background: rgba(196, 196, 196, 0.2);
     display: flex;
     align-items: center;
     flex-flow: row, nowrap;
     justify-content: space-between;
+
+    /* box-shadow: 0 3px 10px 1px rgba(0, 0, 0, 0.08); */
   }
 
   .logo {
