--- a/src/components/FicheFilm/FicheFilm.css
+++ b/src/components/FicheFilm/FicheFilm.css
@@ -1,6 +1,3 @@
-body {
-  background-color: goldenrod;
-}
 
 body > div {
   font-family: 'Reem Kufi', sans-serif;
@@ -18,14 +15,12 @@ img {
   margin-bottom: 40px;
 }
 
-.poster
-{
+.poster {
   margin-left: 90px;
   margin-right: 40px;
 }
 
-.backgroundPoster
-{
+.backgroundPoster {
   z-index: -1;
   width: 100%;
   height: 518px;
@@ -33,29 +28,25 @@ img {
   opacity: 0.5;
 }
 
-.backgroundPoster > img
-{
-  -webkit-box-shadow: inset 0px 2px 50px 13px #000000; 
-  box-shadow: inset 0px 2px 50px 13px #000000;
+.backgroundPoster > img {
+  -webkit-box-shadow: inset 0 2px 50px 13px #000;
+  box-shadow: inset 0 2px 50px 13px #000;
 }
 
-.buttonAdd
-{
+.buttonAdd {
   width: 60px;
   height: 60px;
   cursor: pointer;
   margin-right: -60px;
 }
 
-.buttonTrailer 
-{
+.buttonTrailer {
   width: 60px;
   height: 60px;
   cursor: pointer;
   margin-top: 330px;
   margin-right: 5px;
 }
-
 
 .overview {
   font-size: 25px;
@@ -101,9 +92,7 @@ img {
   width: 100%;
 }
 
-.directorTimeDate > p
-{
-  
+.directorTimeDate > p {
   padding-right: 10px;
   width: 200px;
 }
@@ -166,31 +155,28 @@ img {
   margin-left: 3px;
   margin-top: 5px;
 }
-@media screen and (max-width: 1920px )
-{
-.poster
-{
-  margin-left: 90px;
-  margin-right: 5px;
-}
 
-.buttonTrailer 
-{
-  width: 60px;
-  height: 60px;
-  cursor: pointer;
-  margin-top: 10px;
-  margin-right: -59px;
-}
+@media screen and (max-width: 1920px) {
+  .poster {
+    margin-left: 90px;
+    margin-right: 5px;
+  }
 
-.buttonAdd
-{
-  width: 60px;
-  height: 60px;
-  cursor: pointer;
-  margin-right: -59px;
-  margin-top: 360px;
-}
+  .buttonTrailer {
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-right: -59px;
+  }
+
+  .buttonAdd {
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    margin-right: -59px;
+    margin-top: 360px;
+  }
 }
 
 @media screen and (max-width: 390px) {
@@ -213,17 +199,18 @@ img {
     width: 48%;
     height: 48%;
   }
-  .backgroundPoster
-  {
+
+  .backgroundPoster {
     display: none;
   }
-  .buttons
-  {
+
+  .buttons {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     padding-right: 60px;
   }
+
   .buttonTrailer {
     width: 60px;
     height: 60px;
@@ -231,13 +218,14 @@ img {
     margin-top: 40px;
     margin-bottom: 40px;
   }
-  
-  .buttonAdd{
+
+  .buttonAdd {
     width: 60px;
     height: 60px;
     cursor: pointer;
-    margin-top: 40px;;
+    margin-top: 40px;
   }
+
   .vote {
     font-size: 18px;
   }
@@ -249,9 +237,8 @@ img {
     display: flex;
     flex-direction: column;
   }
-  
-  .directorTimeDate > p
-  {
+
+  .directorTimeDate > p {
     margin-left: -50%;
     padding-right: 10px;
     padding-bottom: 20px;
