--- a/src/components/FicheFilm/FicheFilm.css
+++ b/src/components/FicheFilm/FicheFilm.css
@@ -99,7 +99,15 @@ body > div {
   background-color: rgba(8, 7, 7, 0.219);
   border-radius: 10px;
   overflow-y: auto;
-  height: 35vh;
+  height: 40vh;
+  padding: 5px;
+}
+
+.director {
+  font-size: 25px;
+  background-color: rgba(8, 7, 7, 0.219);
+  border-radius: 10px;
+  height: 17vh;
   padding: 5px;
 }
 
@@ -109,11 +117,30 @@ body > div {
   width: 30vw;
   padding-top: 10px;
   margin-right: 1vw;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .directorTimeDate {
   font-size: 25px;
   width: 30vw;
+  display: flex;
+  flex-direction: column;
+  height: 60vh;
+  color: #fff;
+}
+
+.PovIco {
+  height: 3.5vh;
+  margin: 0.5vw 0.5vw 0.5vw 0;
+}
+
+.provide {
+  display: flex;
+  flex-direction: column;
+  height: 15vh;
 }
 
 .actors {
@@ -137,27 +164,24 @@ body > div {
 .actors > div p {
   font-size: 17px;
   background: #000;
-  background:
-    -moz-linear-gradient(
-      top,
-      rgb(0, 0, 0, 0.5) 0%,
-      #eee8ec 20%,
-      #fff 100%
-    );
-  background:
-    -webkit-linear-gradient(
-      top,
-      rgb(0, 0, 0, 0.5) 0%,
-      #eee8ec 20%,
-      #fff 100%
-    );
-  background:
-    linear-gradient(
-      to bottom,
-      rgb(0, 0, 0, 0.5) 0%,
-      #eee8ec 20%,
-      #fff 100%
-    );
+  background: -moz-linear-gradient(
+    top,
+    rgb(0, 0, 0, 0.5) 0%,
+    #eee8ec 20%,
+    #fff 100%
+  );
+  background: -webkit-linear-gradient(
+    top,
+    rgb(0, 0, 0, 0.5) 0%,
+    #eee8ec 20%,
+    #fff 100%
+  );
+  background: linear-gradient(
+    to bottom,
+    rgb(0, 0, 0, 0.5) 0%,
+    #eee8ec 20%,
+    #fff 100%
+  );
   border-right: 1px solid #000;
   border-left: 1px solid #000;
   border-bottom: 1px solid #000;
