--- a/src/components/FicheFilm/FicheFilm.css
+++ b/src/components/FicheFilm/FicheFilm.css
@@ -1,3 +1,4 @@
+
 body {
   background-color: goldenrod;
 }
@@ -7,62 +8,32 @@ body > div {
 }
 
 img {
-  width: 425px;
-  height: 518px;
+  height: 650px;
 }
 
 .posterTrailer {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   margin-top: 40px;
   margin-bottom: 40px;
 }
 
-.poster
-{
-  margin-left: 90px;
-  margin-right: 40px;
-}
-
-.backgroundPoster
-{
+.backgroundPoster {
   z-index: -1;
+
+  --main-height: 85vh;
+
   width: 100%;
-  height: 518px;
   position: absolute;
-  opacity: 0.5;
+  filter: grayscale(100%) blur(1px) opacity(80%) brightness(80%);
+  object-fit: cover;
+  object-position: center;
 }
 
-.backgroundPoster > img
-{
-  -webkit-box-shadow: inset 0px 2px 50px 13px #000000; 
-  box-shadow: inset 0px 2px 50px 13px #000000;
-}
-
-.buttonAdd
-{
-  width: 60px;
-  height: 60px;
-  cursor: pointer;
-  margin-right: -60px;
-}
-
-.buttonTrailer 
-{
-  width: 60px;
-  height: 60px;
-  cursor: pointer;
-  margin-top: 330px;
-  margin-right: 5px;
-}
-
-
-.overview {
-  font-size: 25px;
-  text-align: left;
-  margin-top: 10px;
-  margin-right: 30%;
-  width: 60%;
+.backgroundPoster > img {
+  -webkit-box-shadow: inset 0 2px 50px 13px #000;
+  box-shadow: inset 0 2px 50px 13px #000;
 }
 
 .titreVote {
@@ -71,7 +42,7 @@ img {
   justify-content: space-between;
   margin-left: 55px;
   margin-right: 55px;
-  margin-top: 20px;
+  margin-top: 10vh;
   align-items: center;
 }
 
@@ -79,39 +50,44 @@ img {
   font-size: 25px;
   display: flex;
   flex-direction: column;
-  margin-left: 55px;
   margin-bottom: 30px;
+  background-color: rgba(255, 255, 240, 0.247);
+  height: 69vh;
+  margin-top: 2%;
 }
 
 .genres {
   display: flex;
   flex-direction: row;
+  margin-bottom: 7vh;
 }
 
 .genres > p {
-  padding-top: 100px;
-  padding-right: 20px;
+  padding-right: 10px;
 }
 
 .directorTimeDate {
   font-size: 25px;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  padding-left: 100px;
   width: 100%;
+  background-color: rgba(255, 255, 240, 0.247);
+  order: -1;
 }
 
-.directorTimeDate > p
-{
-  
+.directorTimeDate > p {
   padding-right: 10px;
   width: 200px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .actors {
   display: flex;
   justify-content: center;
   text-align: center;
+  margin-top: 25vh;
 }
 
 .actors > div img {
@@ -166,142 +142,221 @@ img {
   margin-left: 3px;
   margin-top: 5px;
 }
-@media screen and (max-width: 1920px )
-{
-.poster
-{
-  margin-left: 90px;
-  margin-right: 5px;
-}
 
-.buttonTrailer 
-{
-  width: 60px;
-  height: 60px;
-  cursor: pointer;
-  margin-top: 10px;
-  margin-right: -59px;
-}
-
-.buttonAdd
-{
-  width: 60px;
-  height: 60px;
-  cursor: pointer;
-  margin-right: -59px;
-  margin-top: 360px;
-}
-}
-
-@media screen and (max-width: 390px) {
-  .titreVote {
-    font-size: 22px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  .posterTrailer {
-    display: flex;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    flex-direction: column;
-  }
-
-  .posterTrailer > img {
-    margin-bottom: 25px;
-    margin-left: 25%;
-    width: 48%;
-    height: 48%;
-  }
-  .backgroundPoster
-  {
-    display: none;
-  }
-  .buttons
-  {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding-right: 60px;
-  }
-  .buttonTrailer {
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
-  
-  .buttonAdd{
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-    margin-top: 40px;;
-  }
-  .vote {
-    font-size: 18px;
+@media screen and (max-width: 1920px) {
+  .poster {
+    margin-right: 5px;
   }
 
   .directorTimeDate {
-    font-size: 20px;
-    margin-top: 5px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .directorTimeDate > p
-  {
-    margin-left: -50%;
-    padding-right: 10px;
-    padding-bottom: 20px;
-    width: 200px;
-  }
-
-  .genresOverview {
     font-size: 25px;
     display: flex;
     flex-direction: column;
-    margin-left: 55px;
-    margin-bottom: 30px;
-  }
-
-  .genres {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    margin-left: -40px;
-  }
-
-  .genres > p {
-    padding-right: 25px;
-    padding-top: 10px;
+    width: 100%;
+    background-color: rgba(255, 255, 240, 0.247);
+    order: -1;
   }
 
   .overview {
-    font-size: 20px;
-    margin-top: 20px;
-    margin-left: 20px;
+    font-size: 25px;
     text-align: left;
-    width: 70%;
+    overflow-y: auto;
+    width: 38vw;
   }
 
-  .actors {
-    flex-direction: column;
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    bottom: 39%;
+    left: 23%;
   }
 
-  .actors > div p {
-    margin-left: 88px;
-    width: 193px;
+  .buttonAdd {
+    margin: 0;
+    margin-left: 30%;
+    width: 5em;
+    height: 5em;
+    background-color: rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    border-radius: 50px;
+    position: absolute;
+    left: 100%;
   }
 
-  .actors > div img {
-    width: 193px;
-    height: 241px;
+  .buttonTrailer {
+    margin: 0;
+    margin-left: 30%;
+    width: 4em;
+    height: 4em;
+    background-color: rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    border-radius: 50px;
+    position: relative;
+    border: 1px solid white;
+    right: 20%;
   }
 
-  .actors > div {
-    margin: 2px;
+  .playTriangle {
+    margin: 0 auto;
+    top: 20%;
+    right: 20%;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 1.2em 0 1.2em 2em;
+    border-color: transparent transparent transparent #000;
+    opacity: 0.75;
+  }
+
+  .buttonTrailer:hover .playTriangle:hover {
+    opacity: 1;
+  }
+
+  @media screen and (max-width: 768px) {
+    .starScore {
+      width: 120px;
+      height: 22px;
+    }
+
+    .titreVote {
+      display: flex;
+      flex-direction: column;
+      font-size: 35px;
+      margin-top: 10vh;
+      margin-bottom: 0;
+    }
+
+    .directorTimeDate {
+      font-size: 25px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      background-color: rgba(255, 255, 240, 0.247);
+      margin-bottom: 30%;
+      order: 1;
+      text-align: center;
+      margin-top: 0;
+    }
+
+    .posterTrailer {
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .posterTrailer > img {
+      margin-bottom: 25px;
+      width: 59%;
+      height: 59%;
+      box-shadow: 20px 10px 23px -10px rgba(0, 0, 0, 0.384);
+    }
+
+    .backgroundPoster {
+      z-index: -1;
+      display: none;
+    }
+
+    .buttons {
+      display: flex;
+      flex-direction: row;
+      top: 21%;
+    }
+
+    .buttonAdd {
+      margin: 0;
+      margin-left: 30%;
+      width: 5em;
+      height: 5em;
+      background-color: rgba(0, 0, 0, 0.25);
+      cursor: pointer;
+      border-radius: 50px;
+      position: absolute;
+      top: 6.5%;
+    }
+
+    .buttonTrailer {
+      width: 60px;
+      height: 60px;
+      cursor: pointer;
+      margin-top: 40px;
+      margin-bottom: 40px;
+      top: 3%;
+    }
+
+    .playTriangle {
+      margin: 0 auto;
+      top: 18%;
+      right: 18%;
+      position: absolute;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 1.3em 0 1.3em 2em;
+      border-color: transparent transparent transparent #000;
+      opacity: 0.75;
+    }
+
+    .buttonTrailer:hover .playTriangle:hover {
+      opacity: 1;
+    }
+
+    .vote {
+      font-size: 18px;
+    }
+
+    .directorTimeDate > p {
+      padding-right: 10px;
+      padding-bottom: 20px;
+    }
+
+    .genresOverview {
+      display: flex;
+      flex-flow: column wrap;
+      font-size: 25px;
+      margin-bottom: 30px;
+      overflow-y: auto;
+      width: 100vw;
+    }
+
+    .genres {
+      display: flex;
+      flex-flow: wrap;
+      justify-content: center;
+      margin-bottom: 30%;
+    }
+
+    .genres > p {
+      padding-right: 25px;
+      padding-top: 10px;
+    }
+
+    .overview {
+      width: 100vw;
+      font-size: 20px;
+      overflow-y: auto;
+    }
+
+    .actors {
+      flex-direction: column;
+      margin-top: 0;
+    }
+
+    .actors > div p {
+      margin-left: 88px;
+      width: 193px;
+    }
+
+    .actors > div img {
+      width: 193px;
+      height: 241px;
+    }
+
+    .actors > div {
+      margin: 2px;
+    }
   }
 }
-
