--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -23,8 +23,7 @@
 
 @media (min-width: 800px) {
   .popMovieImg {
-    width: 320px;
-    height: 500px;
+    width: 18vw;
     margin-bottom: 13vh;
   }
 
