--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,62 +1,126 @@
-.footer {
+.footer .links {
   display: flex;
-  bottom: 0;
+  flex-direction: row;
   justify-content: space-around;
+  text-align: center;
+  position: relative;
+  bottom: 0;
   background-color: rgba(0, 0, 0, 0.39);
   color: white;
-  height: 19vh;
+  height: auto;
   width: 100vw;
-  font-size: 30px;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.wildAndSons,
-.creditsLink {
-  color: white;
-  text-decoration-line: none;
-}
-
-.keepnBloc {
+.wrapper {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
 }
 
-.keepnTeam {
-  line-height: 22px;
+.wrapper .icon {
+  position: relative;
+  background-color: #fff;
+  border-radius: 50%;
+  padding: 15px;
+  margin: 10px;
+  width: 40px;
+  height: 40px;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .tooltip {
+  display: visible;
+  position: absolute;
+  top: 0;
+  font-size: 14px;
+  background-color: #fff;
+  color: #fff;
+  padding: 5px 8px;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .tooltip::before {
+  position: absolute;
+  content: '';
+  height: 8px;
+  width: 8px;
+  background-color: #fff;
+  bottom: -3px;
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .icon:hover .tooltip {
+  top: -45px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.wrapper .icon:hover span,
+.wrapper .icon:hover .tooltip {
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.1);
+}
+
+.wrapper .facebook:hover,
+.wrapper .facebook:hover .tooltip,
+.wrapper .facebook:hover .tooltip::before {
+  background-color: #3b5998;
+  color: #fff;
+}
+
+.wrapper .website:hover,
+.wrapper .website:hover .tooltip,
+.wrapper .website:hover .tooltip::before {
+  background-color: #f76c6c;
+  color: #fff;
+}
+
+.wrapper .credits:hover,
+.wrapper .credits:hover .tooltip,
+.wrapper .credits:hover .tooltip::before {
+  background-color: rgb(30, 213, 169);
+  color: #fff;
+}
+
+.wrapper .github:hover,
+.wrapper .github:hover .tooltip,
+.wrapper .github:hover .tooltip::before {
+  background-color: #333;
+  color: #fff;
+}
+
+.legalMentions {
+  margin: bottom -100px;
+  text-align: center;
+  font-size: 13px;
 }
 
 @media screen and (max-width: 600px) {
-  .footer {
-    display: flex;
-    position: absolute;
-    bottom: 0;
-    justify-content: space-around;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.39);
-    color: white;
-    height: 9vh;
-    width: 100vw;
-    font-size: 17px;
+  .footer .links {
+    flex-direction: column;
+    height: auto;
+    width: auto;
+    font-size: 15px;
+    padding-top: 5vw;
+    padding-bottom: 3vw;
   }
 
-  .githubTeam {
+  .legalMentions {
     display: none;
-  }
-
-  .githubProject {
-    display: visible;
-  }
-}
-
-/* ---------------DESKTOP VERSION ----------------------- */
-
-@media screen and (min-width: 600px) {
-  .githubProject {
-    display: none;
-  }
-
-  .githubLogo {
-    height: 40px;
-    width: 40px;
   }
 }
