--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -12,6 +12,68 @@
   top: 36px;
 }
 
+/* .menu {
+  height: 10vh;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  margin-bottom: 1vh;
+  width: 100%;
+  background-color: #e5e5f7;
+  background-image: linear-gradient(
+      30deg,
+      #f79a22 40%,
+      transparent 12.5%,
+      transparent 87%,
+      #f7bd51 87.5%,
+      #f1bc47
+    ),
+    linear-gradient(
+      150deg,
+      #facc4d 50%,
+      transparent 40%,
+      transparent 87%,
+      #f5a81b 87.5%,
+      #f1bc28
+    ),
+    linear-gradient(
+      30deg,
+      #facc4d 50%,
+      transparent 40%,
+      transparent 87%,
+      #f5a81b 87.5%,
+      #f1bc28
+    ),
+    linear-gradient(
+      50deg,
+      #facc4d 30%,
+      transparent 40%,
+      transparent 87%,
+      #f5a81b 87.5%,
+      #f1bc28
+    ),
+    linear-gradient(
+      60deg,
+      #facc4d 30%,
+      transparent 40%,
+      transparent 75%,
+      #f5a81b 75%,
+      #f1bc28
+    ),
+    linear-gradient(
+      60deg,
+      #f7d067 40%,
+      transparent 25.5%,
+      transparent 75%,
+      #f5a81b 75%,
+      #f1bc28
+    );
+  overflow-x: scroll;
+  background-size: 100vw 1200px;
+  background-attachment: scroll;
+  background-position: cover;
+} */
+
 .bm-burger-bars {
   background: #373a47;
   border-radius: 9999px;
@@ -92,6 +154,10 @@
 
   /* Removing Burger menu from Desktop  */
   .bm-burger-button {
+    display: none;
+  }
+
+  .menu {
     display: none;
   }
 }
