--- a/src/components/FicheFilm/FicheFilm.css
+++ b/src/components/FicheFilm/FicheFilm.css
@@ -1,6 +1,3 @@
-body {
-  background-color: goldenrod;
-}
 
 body > div {
   font-family: 'Reem Kufi', sans-serif;
@@ -35,7 +32,7 @@ img {
   box-shadow: inset 0 2px 50px 13px #000;
 }
 
-.titreVote {
+.titleVote {
   font-size: 43px;
   display: flex;
   justify-content: space-between;
@@ -160,12 +157,12 @@ img {
   margin-top: 5px;
 }
 
-.PovIco {
+.provIco {
   height: 3.5vh;
   margin: 0.5vw 0.5vw 0.5vw 0;
 }
 
-.Provide {
+.provider {
   display: flex;
   flex-direction: column;
   height: 15vh;
@@ -243,13 +240,13 @@ img {
     opacity: 1;
   }
 
-  .PovIco {
+  .povIco {
     height: 3.5vh;
     margin: 0.5vw 0.5vw 0.5vw 0;
   }
 
-  .provide {
-    display: none;
+  .provider {
+    display: flex;
     flex-direction: column;
     height: 15vh;
   }
