--- a/src/components/FicheFilm/FicheFilm.css
+++ b/src/components/FicheFilm/FicheFilm.css
@@ -1,3 +1,4 @@
+
 body > div {
   font-family: 'Reem Kufi', sans-serif;
 }
@@ -156,6 +157,17 @@ img {
   margin-top: 5px;
 }
 
+.provIco {
+  height: 3.5vh;
+  margin: 0.5vw 0.5vw 0.5vw 0;
+}
+
+.provider {
+  display: flex;
+  flex-direction: column;
+  height: 15vh;
+}
+
 @media screen and (max-width: 1920px) {
   .poster {
     margin-right: 5px;
@@ -228,13 +240,25 @@ img {
     opacity: 1;
   }
 
+  .provIco {
+    height: 5vh;
+    margin: 0.5vw 0.5vw 0.5vw 0;
+  }
+
+  .provider {
+    display: flex;
+    flex-direction: column;
+    height: 15vh;
+    margin-top: 2.5vh;
+  }
+
   @media screen and (max-width: 768px) {
     .starScore {
       width: 120px;
       height: 22px;
     }
 
-    .titleVote {
+    .titreVote {
       display: flex;
       flex-direction: column;
       font-size: 35px;
