Forgotten french class in css

--- a/src/components/FicheFilm/FicheFilm.css
+++ b/src/components/FicheFilm/FicheFilm.css
@@ -257,7 +257,7 @@ img {
       height: 22px;
     }
 
-    .titreVote {
+    .titleVote {
       display: flex;
       flex-direction: column;
       font-size: 35px;
