Change vw by % for img carousel

--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -23,8 +23,8 @@
 
 @media (min-width: 800px) {
   .popMovieImg {
-    width: 17vw;
-    height: 27vw;
+    width: 17%;
+    height: 27%;
     margin-bottom: 13vh;
   }
 
